calculated charge ratios

--- a/notebooks/rtcc_footage_request_rates.ipynb
+++ b/notebooks/rtcc_footage_request_rates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "def standardize_item_no(df):\n",
+    "    df.loc[:, \"item_number\"] = df.item_number.str.lower().str.strip()\n",
+    "    return df\n",
     "\n",
     "def clean():\n",
     "    df1 = pd.read_csv(\"../data/electronic_police_report_2018.csv\")\n",
@@ -28,26 +32,27 @@
     "\n",
     "    dfs = [df1, df2, df3, df4, df5]\n",
     "    dfa = pd.concat(dfs, join=\"outer\")\n",
+    "    dfa = dfa.pipe(standardize_item_no)\n",
     "    \n",
     "    dfb = pd.read_csv(\"../data/rtcc.csv\", encoding=\"cp1252\").rename(columns={\"Item_number\": \"item_number\"})\n",
+    "    dfb = dfb.pipe(standardize_item_no)\n",
     "\n",
-    "    df = pd.merge(dfa, dfb, on=\"item_number\")\n",
-    "    return df.drop_duplicates(subset=[\"item_number\"])"
+    "    df = pd.merge(dfb, dfa, on=\"item_number\")\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [],
    "source": [
     "def drop_rows_missing_race(df):\n",
     "    df.loc[:, \"offender_race\"] = df.offender_race.fillna(\"\").str.lower().str.strip()\\\n",
-    "    .str.replace(\"unknown\", \"\", regex=False)\n",
-    "    # .str.replace(\"hispanic\", \"non-black\", regex=False)\\\n",
-    "    # .str.replace(\"asian\", \"non-black\", regex=False)\\\n",
-    "    # .str.replace(\"white\", \"non-black\", regex=False)\\\n",
-    "    # .str.replace(r\"amer\\. ind\\.\", \"non-black\", regex=True)\n",
+    "    .str.replace(\"unknown\", \"\", regex=False)\\\n",
+    "    .str.replace(\"hispanic\", \"\", regex=False)\\\n",
+    "    .str.replace(\"asian\", \"\", regex=False)\\\n",
+    "    .str.replace(r\"amer\\. ind\\.\", \"\", regex=True)\n",
     "    return df[~((df.offender_race == \"\"))]\n",
     "\n",
     "\n",
@@ -68,73 +73,30 @@
     "def filter_year(df):\n",
     "    df.loc[:, \"year\"] = df.year.astype(str).str.replace(r\"\\.$\", \"\", regex=True)\n",
     "    df = df[df.year.astype(str).isin([\"2018\", \"2019\", \"2020\", \"2021\", \"2022\"])]\n",
-    "    # the following figures are percentages of the \"offender_race\" value\n",
-    "    ### 2018 - 2022\n",
-    "    \"\"\"\n",
-    "      black         0.768292\n",
-    "      unknown       0.152651\n",
-    "      white         0.068554\n",
-    "      hispanic      0.009226\n",
-    "      asian         0.001065\n",
-    "      -amer. ind.    0.000213\n",
-    "    \"\"\"\n",
-    "    ### 2022\n",
-    "    \"\"\"\n",
-    "      black      0.660252\n",
-    "      unknown    0.297557\n",
-    "      white      0.039230\n",
-    "      asian      0.002961\n",
-    "    \"\"\"\n",
-    "    ### 2021\n",
-    "    \"\"\"\n",
-    "      black       0.663802\n",
-    "      unknown     0.279270\n",
-    "      white       0.055209\n",
-    "      asian       0.001074\n",
-    "      hispanic    0.000644\n",
-    "    \"\"\"\n",
-    "    ### 2020\n",
-    "    \"\"\"\n",
-    "      black         0.867308\n",
-    "      unknown       0.069408\n",
-    "      white         0.046369\n",
-    "      hispanic      0.016040\n",
-    "      amer. ind.    0.000875\n",
-    "    \"\"\"\n",
-    "    ### 2019\n",
-    "    \"\"\"\n",
-    "      black       0.849009\n",
-    "      white       0.091532\n",
-    "      unknown     0.044685\n",
-    "      hispanic    0.013694\n",
-    "      asian       0.001081\n",
-    "    \"\"\"\n",
-    "    ### 2018\n",
-    "    \"\"\"\n",
-    "      black       0.804891\n",
-    "      white       0.129187\n",
-    "      unknown     0.046252\n",
-    "      hispanic    0.018075\n",
-    "      asian       0.001595\n",
-    "    \"\"\"\n",
-    "    return df"
+    "    return df\n",
+    "  \n",
+    "  \n",
+    "def drop_rows_missing_charge_desc(df):\n",
+    "    df.loc[:, \"charge_description\"] = df.charge_description.str.lower().str.strip().fillna(\"\")\n",
+    "    return df[~((df.charge_description == \"\"))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_data():\n",
     "  df = clean()\n",
-    "  df = df.pipe(filter_gender).pipe(filter_year).pipe(drop_rows_missing_race)\n",
+    "  df = df.pipe(filter_year).pipe(drop_rows_missing_race).pipe(drop_rows_missing_charge_desc)\n",
+    "  df = df.drop_duplicates()\n",
     "  return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,16 +123,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['black', 'white', 'hispanic', 'asian', 'amer. ind.'], dtype=object)"
+       "offender_race  rtcc_footage_request_tally\n",
+       "black          1                             6848\n",
+       "white          1                              583\n",
+       "Name: rtcc_footage_request_tally, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 685,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"offender_race\").rtcc_footage_request_tally.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 686,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['black', 'white'], dtype=object)"
+      ]
+     },
+     "execution_count": 686,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,53 +166,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[[\"offender_race\", \"rtcc_footage_request_tally\", \"offender_gender\"]]\n",
-    "df = df.groupby([\"offender_race\", \"offender_gender\"]).rtcc_footage_request_tally.count()\n",
+    "df = df[[\"offender_race\", \"rtcc_footage_request_tally\", \"charge_description\"]]\n",
+    "df = df.groupby([\"offender_race\",\"charge_description\"]).rtcc_footage_request_tally.count()\n",
     "df = pd.DataFrame(df).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.loc[(df.offender_race == \"black\"), \"population\"] = \"105498\"\n",
     "df.loc[(df.offender_race == \"white\"), \"population\"] = \"65756\"\n",
-    "df.loc[(df.offender_race == \"hispanic\"), \"population\"] = \"11205\"\n",
-    "df.loc[(df.offender_race == \"amer. ind.\"), \"population\"] = \"360\"\n",
-    "df.loc[(df.offender_race == \"asian\"), \"population\"] = \"5499\""
+    "\n",
+    "df.loc[(df.offender_race == \"black\"), \"total_requests\"] = \"6848\"\n",
+    "df.loc[(df.offender_race == \"white\"), \"total_requests\"] = \"583\"\n",
+    "\n",
+    "\n",
+    "# df.loc[(df.offender_race == \"hispanic\"), \"population\"] = \"11205\"\n",
+    "# df.loc[(df.offender_race == \"amer. ind.\"), \"population\"] = \"360\"\n",
+    "# df.loc[(df.offender_race == \"asian\"), \"population\"] = \"5499\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_rate(dfb_total, population=\"\"):\n",
     "    population = int(population)\n",
     "    rate = (( dfb_total / population) * 1000)\n",
-    "    return rate"
+    "    return rate\n",
+    "\n",
+    "def calc_ratio(charges, total=\"\"):\n",
+    "    ratio = (charges/total)\n",
+    "    return ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"rate_per_1000_persons\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.population), axis=1)\n",
+    "df[\"ratio\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.total_requests), axis=1)\n",
     "df[\"year\"] = \"2018-2022\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [
     {
@@ -252,86 +247,192 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>offender_race</th>\n",
-       "      <th>offender_gender</th>\n",
+       "      <th>charge_description</th>\n",
        "      <th>rtcc_footage_request_tally</th>\n",
        "      <th>population</th>\n",
+       "      <th>total_requests</th>\n",
        "      <th>rate_per_1000_persons</th>\n",
+       "      <th>ratio</th>\n",
        "      <th>year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>amer. ind.</td>\n",
-       "      <td>male</td>\n",
+       "      <td>black</td>\n",
+       "      <td>2nd degree cruelty to juveniles</td>\n",
        "      <td>1</td>\n",
-       "      <td>360</td>\n",
-       "      <td>2.777778</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>0.009479</td>\n",
+       "      <td>0.146028</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>asian</td>\n",
-       "      <td>male</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5499</td>\n",
-       "      <td>1.272959</td>\n",
+       "      <td>black</td>\n",
+       "      <td>access device fraud</td>\n",
+       "      <td>20</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>0.189577</td>\n",
+       "      <td>2.920561</td>\n",
+       "      <td>2018-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>white</td>\n",
+       "      <td>access device fraud</td>\n",
+       "      <td>6</td>\n",
+       "      <td>65756</td>\n",
+       "      <td>583</td>\n",
+       "      <td>0.091246</td>\n",
+       "      <td>10.291595</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>black</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2828</td>\n",
+       "      <td>accessory - 2nd degree murder</td>\n",
+       "      <td>1</td>\n",
        "      <td>105498</td>\n",
-       "      <td>26.806195</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>0.009479</td>\n",
+       "      <td>0.146028</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>hispanic</td>\n",
-       "      <td>male</td>\n",
-       "      <td>40</td>\n",
-       "      <td>11205</td>\n",
-       "      <td>3.569835</td>\n",
+       "      <td>black</td>\n",
+       "      <td>accessory - agg. assault</td>\n",
+       "      <td>4</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>0.037915</td>\n",
+       "      <td>0.584112</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
        "      <td>white</td>\n",
-       "      <td>male</td>\n",
-       "      <td>278</td>\n",
+       "      <td>violations of protective orders</td>\n",
+       "      <td>2</td>\n",
        "      <td>65756</td>\n",
-       "      <td>4.227751</td>\n",
+       "      <td>583</td>\n",
+       "      <td>0.030415</td>\n",
+       "      <td>3.430532</td>\n",
+       "      <td>2018-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>black</td>\n",
+       "      <td>violations of protective orders</td>\n",
+       "      <td>11</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>0.104267</td>\n",
+       "      <td>1.606308</td>\n",
+       "      <td>2018-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>352</th>\n",
+       "      <td>white</td>\n",
+       "      <td>violations of registration provisions</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65756</td>\n",
+       "      <td>583</td>\n",
+       "      <td>0.015208</td>\n",
+       "      <td>1.715266</td>\n",
+       "      <td>2018-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>black</td>\n",
+       "      <td>warrant issued by</td>\n",
+       "      <td>7</td>\n",
+       "      <td>105498</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>0.066352</td>\n",
+       "      <td>1.022196</td>\n",
+       "      <td>2018-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>white</td>\n",
+       "      <td>warrant issued by</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65756</td>\n",
+       "      <td>583</td>\n",
+       "      <td>0.015208</td>\n",
+       "      <td>1.715266</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>354 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  offender_race offender_gender  rtcc_footage_request_tally population  \\\n",
-       "0    amer. ind.            male                           1        360   \n",
-       "1         asian            male                           7       5499   \n",
-       "2         black            male                        2828     105498   \n",
-       "3      hispanic            male                          40      11205   \n",
-       "4         white            male                         278      65756   \n",
+       "    offender_race                     charge_description  \\\n",
+       "0           black        2nd degree cruelty to juveniles   \n",
+       "1           black                    access device fraud   \n",
+       "235         white                    access device fraud   \n",
+       "2           black          accessory - 2nd degree murder   \n",
+       "3           black               accessory - agg. assault   \n",
+       "..            ...                                    ...   \n",
+       "351         white        violations of protective orders   \n",
+       "233         black        violations of protective orders   \n",
+       "352         white  violations of registration provisions   \n",
+       "234         black                      warrant issued by   \n",
+       "353         white                      warrant issued by   \n",
        "\n",
-       "   rate_per_1000_persons       year  \n",
-       "0               2.777778  2018-2022  \n",
-       "1               1.272959  2018-2022  \n",
-       "2              26.806195  2018-2022  \n",
-       "3               3.569835  2018-2022  \n",
-       "4               4.227751  2018-2022  "
+       "     rtcc_footage_request_tally population total_requests  \\\n",
+       "0                             1     105498           6848   \n",
+       "1                            20     105498           6848   \n",
+       "235                           6      65756            583   \n",
+       "2                             1     105498           6848   \n",
+       "3                             4     105498           6848   \n",
+       "..                          ...        ...            ...   \n",
+       "351                           2      65756            583   \n",
+       "233                          11     105498           6848   \n",
+       "352                           1      65756            583   \n",
+       "234                           7     105498           6848   \n",
+       "353                           1      65756            583   \n",
+       "\n",
+       "     rate_per_1000_persons      ratio       year  \n",
+       "0                 0.009479   0.146028  2018-2022  \n",
+       "1                 0.189577   2.920561  2018-2022  \n",
+       "235               0.091246  10.291595  2018-2022  \n",
+       "2                 0.009479   0.146028  2018-2022  \n",
+       "3                 0.037915   0.584112  2018-2022  \n",
+       "..                     ...        ...        ...  \n",
+       "351               0.030415   3.430532  2018-2022  \n",
+       "233               0.104267   1.606308  2018-2022  \n",
+       "352               0.015208   1.715266  2018-2022  \n",
+       "234               0.066352   1.022196  2018-2022  \n",
+       "353               0.015208   1.715266  2018-2022  \n",
+       "\n",
+       "[354 rows x 8 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 691,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sort_values(\"offender_race\")"
+    "df.sort_values(\"charge_description\")"
    ]
   }
  ],
