--- a/notebooks/rtcc_footage_request_rates.ipynb
+++ b/notebooks/rtcc_footage_request_rates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 769,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 770,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 773,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 774,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "Name: rtcc_footage_request_tally, dtype: int64"
       ]
      },
-     "execution_count": 685,
+     "execution_count": 774,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 775,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "array(['black', 'white'], dtype=object)"
       ]
      },
-     "execution_count": 686,
+     "execution_count": 775,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 776,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 777,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 778,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,24 +205,25 @@
     "    return rate\n",
     "\n",
     "def calc_ratio(charges, total=\"\"):\n",
-    "    ratio = (charges/total)\n",
+    "    total = int(total)\n",
+    "    ratio = charges/total\n",
     "    return ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 779,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"rate_per_1000_persons\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.population), axis=1)\n",
-    "df[\"ratio\"] = df.apply(lambda x: calc_rate(x.rtcc_footage_request_tally, x.total_requests), axis=1)\n",
+    "df[\"ratio\"] = df.apply(lambda x: calc_ratio(x.rtcc_footage_request_tally, x.total_requests), axis=1)\n",
     "df[\"year\"] = \"2018-2022\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 780,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +266,7 @@
        "      <td>105498</td>\n",
        "      <td>6848</td>\n",
        "      <td>0.009479</td>\n",
-       "      <td>0.146028</td>\n",
+       "      <td>0.000146</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -276,7 +277,7 @@
        "      <td>105498</td>\n",
        "      <td>6848</td>\n",
        "      <td>0.189577</td>\n",
-       "      <td>2.920561</td>\n",
+       "      <td>0.002921</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -287,7 +288,7 @@
        "      <td>65756</td>\n",
        "      <td>583</td>\n",
        "      <td>0.091246</td>\n",
-       "      <td>10.291595</td>\n",
+       "      <td>0.010292</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -298,7 +299,7 @@
        "      <td>105498</td>\n",
        "      <td>6848</td>\n",
        "      <td>0.009479</td>\n",
-       "      <td>0.146028</td>\n",
+       "      <td>0.000146</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -309,7 +310,7 @@
        "      <td>105498</td>\n",
        "      <td>6848</td>\n",
        "      <td>0.037915</td>\n",
-       "      <td>0.584112</td>\n",
+       "      <td>0.000584</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -331,7 +332,7 @@
        "      <td>65756</td>\n",
        "      <td>583</td>\n",
        "      <td>0.030415</td>\n",
-       "      <td>3.430532</td>\n",
+       "      <td>0.003431</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -342,7 +343,7 @@
        "      <td>105498</td>\n",
        "      <td>6848</td>\n",
        "      <td>0.104267</td>\n",
-       "      <td>1.606308</td>\n",
+       "      <td>0.001606</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -353,7 +354,7 @@
        "      <td>65756</td>\n",
        "      <td>583</td>\n",
        "      <td>0.015208</td>\n",
-       "      <td>1.715266</td>\n",
+       "      <td>0.001715</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -364,7 +365,7 @@
        "      <td>105498</td>\n",
        "      <td>6848</td>\n",
        "      <td>0.066352</td>\n",
-       "      <td>1.022196</td>\n",
+       "      <td>0.001022</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -375,7 +376,7 @@
        "      <td>65756</td>\n",
        "      <td>583</td>\n",
        "      <td>0.015208</td>\n",
-       "      <td>1.715266</td>\n",
+       "      <td>0.001715</td>\n",
        "      <td>2018-2022</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -410,23 +411,23 @@
        "234                           7     105498           6848   \n",
        "353                           1      65756            583   \n",
        "\n",
-       "     rate_per_1000_persons      ratio       year  \n",
-       "0                 0.009479   0.146028  2018-2022  \n",
-       "1                 0.189577   2.920561  2018-2022  \n",
-       "235               0.091246  10.291595  2018-2022  \n",
-       "2                 0.009479   0.146028  2018-2022  \n",
-       "3                 0.037915   0.584112  2018-2022  \n",
-       "..                     ...        ...        ...  \n",
-       "351               0.030415   3.430532  2018-2022  \n",
-       "233               0.104267   1.606308  2018-2022  \n",
-       "352               0.015208   1.715266  2018-2022  \n",
-       "234               0.066352   1.022196  2018-2022  \n",
-       "353               0.015208   1.715266  2018-2022  \n",
+       "     rate_per_1000_persons     ratio       year  \n",
+       "0                 0.009479  0.000146  2018-2022  \n",
+       "1                 0.189577  0.002921  2018-2022  \n",
+       "235               0.091246  0.010292  2018-2022  \n",
+       "2                 0.009479  0.000146  2018-2022  \n",
+       "3                 0.037915  0.000584  2018-2022  \n",
+       "..                     ...       ...        ...  \n",
+       "351               0.030415  0.003431  2018-2022  \n",
+       "233               0.104267  0.001606  2018-2022  \n",
+       "352               0.015208  0.001715  2018-2022  \n",
+       "234               0.066352  0.001022  2018-2022  \n",
+       "353               0.015208  0.001715  2018-2022  \n",
        "\n",
        "[354 rows x 8 columns]"
       ]
      },
-     "execution_count": 691,
+     "execution_count": 780,
      "metadata": {},
      "output_type": "execute_result"
     }
