--- a/notebooks/rtcc_open_cases.ipynb
+++ b/notebooks/rtcc_open_cases.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,13 @@
     "    df3 = pd.read_csv(\"../data/electronic_police_report_2020.csv\")\n",
     "    df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n",
     "    df5 = pd.read_csv(\"../data/electronic_police_report_2022.csv\")\n",
-    "    df5[\"year\"] = 2022\n",
     "\n",
+    "    df1[\"year\"] = 2018\n",
+    "    df2[\"year\"] = 2019\n",
+    "    df3[\"year\"] = 2020\n",
+    "    df4[\"year\"] = 2021\n",
+    "    df5[\"year\"] = 2022\n",
+    "    \n",
     "    dfs = [df1, df2, df3, df4, df5]\n",
     "    dfa = pd.concat(dfs, join=\"outer\")\n",
     "    \n",
@@ -23,7 +28,7 @@
     "    dfb[\"footage_requested\"] = \"yes\"\n",
     "\n",
     "    df = pd.merge(dfa, dfb, on=\"item_number\", how=\"outer\")\n",
-    "    return df.drop_duplicates(subset=[\"item_number\"])"
+    "    return df"
    ]
   },
   {
@@ -35,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_18292\\420805230.py:7: DtypeWarning: Columns (21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_23040\\3603306294.py:7: DtypeWarning: Columns (21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n"
      ]
     }
@@ -46,7 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"item_number\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,32 +69,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "year    disposition\n",
-       "2018.0  OPEN           0.607676\n",
-       "        CLOSED         0.369936\n",
-       "        UNFOUNDED      0.022388\n",
-       "2019.0  OPEN           0.608961\n",
-       "        CLOSED         0.370672\n",
-       "        UNFOUNDED      0.020367\n",
-       "2020.0  OPEN           0.733725\n",
-       "        CLOSED         0.247065\n",
-       "        UNFOUNDED      0.019210\n",
-       "2021.0  OPEN           0.742799\n",
-       "        CLOSED         0.231430\n",
-       "        UNFOUNDED      0.025771\n",
-       "2022.0  OPEN           0.750538\n",
-       "        CLOSED         0.238710\n",
-       "        UNFOUNDED      0.010753\n",
+       "2018.0  OPEN           0.609707\n",
+       "        CLOSED         0.369060\n",
+       "        UNFOUNDED      0.021234\n",
+       "2019.0  OPEN           0.608752\n",
+       "        CLOSED         0.371653\n",
+       "        UNFOUNDED      0.019595\n",
+       "2020.0  OPEN           0.729339\n",
+       "        CLOSED         0.252066\n",
+       "        UNFOUNDED      0.018595\n",
+       "2021.0  OPEN           0.747430\n",
+       "        CLOSED         0.227606\n",
+       "        UNFOUNDED      0.024963\n",
+       "2022.0  OPEN           0.753593\n",
+       "        CLOSED         0.236140\n",
+       "        UNFOUNDED      0.010267\n",
        "Name: disposition, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,32 +114,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "year    disposition\n",
-       "2018.0  OPEN           0.712707\n",
-       "        CLOSED         0.282034\n",
-       "        UNFOUNDED      0.005259\n",
-       "2019.0  OPEN           0.743054\n",
-       "        CLOSED         0.250195\n",
-       "        UNFOUNDED      0.006750\n",
-       "2020.0  OPEN           0.819670\n",
-       "        CLOSED         0.173817\n",
-       "        UNFOUNDED      0.006514\n",
-       "2021.0  OPEN           0.833193\n",
-       "        CLOSED         0.156807\n",
-       "        UNFOUNDED      0.009999\n",
-       "2022.0  OPEN           0.848029\n",
-       "        CLOSED         0.143585\n",
-       "        UNFOUNDED      0.008386\n",
+       "2018.0  OPEN           0.710473\n",
+       "        CLOSED         0.284331\n",
+       "        UNFOUNDED      0.005196\n",
+       "2019.0  OPEN           0.740690\n",
+       "        CLOSED         0.252668\n",
+       "        UNFOUNDED      0.006642\n",
+       "2020.0  OPEN           0.816647\n",
+       "        CLOSED         0.176915\n",
+       "        UNFOUNDED      0.006438\n",
+       "2021.0  OPEN           0.831388\n",
+       "        CLOSED         0.158719\n",
+       "        UNFOUNDED      0.009893\n",
+       "2022.0  OPEN           0.846445\n",
+       "        CLOSED         0.145262\n",
+       "        UNFOUNDED      0.008293\n",
        "Name: disposition, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
