added nopd rtcc requests data for 3/2022 - 11/2022

--- a/notebooks/rtcc_open_cases.ipynb
+++ b/notebooks/rtcc_open_cases.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "\n",
     "def clean():\n",
     "    df1 = pd.read_csv(\"../data/electronic_police_report_2018.csv\")\n",
@@ -23,8 +24,10 @@
     "    \n",
     "    dfs = [df1, df2, df3, df4, df5]\n",
     "    dfa = pd.concat(dfs, join=\"outer\")\n",
+    "    dfa.columns = [re.sub(r\"[\\s\\W]+\", \"_\", col.strip()).lower().strip(\"_\") for col in dfa.columns]\n",
+    "\n",
     "    \n",
-    "    dfb = pd.read_csv(\"../data/rtcc.csv\", encoding=\"cp1252\").rename(columns={\"Item_number\": \"item_number\"})\n",
+    "    dfb = pd.read_csv(\"../data/rtcc/rtcc.csv\")\n",
     "    dfb[\"footage_requested\"] = \"yes\"\n",
     "\n",
     "    df = pd.merge(dfa, dfb, on=\"item_number\", how=\"outer\")\n",
@@ -33,15 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_23040\\3603306294.py:7: DtypeWarning: Columns (21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n"
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_1860\\3947428862.py:8: DtypeWarning: Columns (21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n",
+      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_1860\\3947428862.py:9: DtypeWarning: Columns (21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df5 = pd.read_csv(\"../data/electronic_police_report_2022.csv\")\n"
      ]
     }
    ],
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +74,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2021.0    2043\n",
+       "2020.0    1937\n",
+       "2022.0    1715\n",
+       "2019.0    1531\n",
+       "2018.0     989\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "requested.year.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -82,19 +112,19 @@
        "2019.0  OPEN           0.608752\n",
        "        CLOSED         0.371653\n",
        "        UNFOUNDED      0.019595\n",
-       "2020.0  OPEN           0.729339\n",
-       "        CLOSED         0.252066\n",
-       "        UNFOUNDED      0.018595\n",
+       "2020.0  OPEN           0.729479\n",
+       "        CLOSED         0.251936\n",
+       "        UNFOUNDED      0.018585\n",
        "2021.0  OPEN           0.747430\n",
        "        CLOSED         0.227606\n",
        "        UNFOUNDED      0.024963\n",
-       "2022.0  OPEN           0.753593\n",
-       "        CLOSED         0.236140\n",
-       "        UNFOUNDED      0.010267\n",
+       "2022.0  OPEN           0.737026\n",
+       "        CLOSED         0.250146\n",
+       "        UNFOUNDED      0.012828\n",
        "Name: disposition, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -127,19 +157,19 @@
        "2019.0  OPEN           0.740690\n",
        "        CLOSED         0.252668\n",
        "        UNFOUNDED      0.006642\n",
-       "2020.0  OPEN           0.816647\n",
-       "        CLOSED         0.176915\n",
+       "2020.0  OPEN           0.816644\n",
+       "        CLOSED         0.176918\n",
        "        UNFOUNDED      0.006438\n",
        "2021.0  OPEN           0.831388\n",
        "        CLOSED         0.158719\n",
        "        UNFOUNDED      0.009893\n",
-       "2022.0  OPEN           0.846445\n",
-       "        CLOSED         0.145262\n",
-       "        UNFOUNDED      0.008293\n",
+       "2022.0  OPEN           0.845393\n",
+       "        CLOSED         0.145450\n",
+       "        UNFOUNDED      0.009158\n",
        "Name: disposition, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
