--- a/notebooks/ocr.ipynb
+++ b/notebooks/ocr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,10 +73,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n",
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n",
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n",
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n",
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n",
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n",
+      "Will use tool 'Tesseract (sh)'\n",
+      "Available languages: eng, osd\n",
+      "Will use language 'eng'\n"
+     ]
+    }
+   ],
+   "source": [
+    "ocr = ocr_pdfs()"
+   ]
   }
  ],
  "metadata": {
@@ -86,7 +116,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
   "orig_nbformat": 4,
