added notebook for analysis of rtcc footage requests on youth

--- a/notebooks/rtcc_footage_request_rates_youth.ipynb
+++ b/notebooks/rtcc_footage_request_rates_youth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3338: DtypeWarning: Columns (21) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  if await self.run_code(code, result, async_=asy):\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(22732, 27)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +168,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +188,7 @@
        "(4495, 27)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +208,7 @@
        "(2547, 27)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +238,7 @@
        "       '75.0'], dtype=object)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +258,7 @@
        "2547"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -270,19 +278,19 @@
        "371"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfb = df[df.offender_age.isin([\"10.0\", \"11.0\", \"12.0\", \"13.0\", \"14.0\", \"15.0\",  \"16.0\", \"17.0\", \"18.0\",])]\n",
-    "dfb.offender_age.count().sum()"
+    "youth = df[df.offender_age.isin([\"10.0\", \"11.0\", \"12.0\", \"13.0\", \"14.0\", \"15.0\",  \"16.0\", \"17.0\", \"18.0\",])]\n",
+    "youth.offender_age.count().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -291,18 +299,18 @@
        "14.566156262269336"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(371/2547)*100 # = 15%"
+    "(youth.offender_age.count().sum()/df.offender_age.count().sum())*100 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -314,13 +322,13 @@
        "Name: offender_race, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfb.offender_race.value_counts(normalize=True)"
+    "youth.offender_race.value_counts(normalize=True)"
    ]
   }
  ],
