began exploring police report times

--- a/notebooks_rtcc/rtcc_footage_request_rates_youth.ipynb
+++ b/notebooks_rtcc/rtcc_footage_request_rates_youth.ipynb
@@ -18,7 +18,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "from lib import standardize_item_numbers"
    ]
   },
   {
@@ -27,30 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def standardize_item_no(df):\n",
-    "    df.loc[:, \"item_number\"] = df.item_number.str.lower().str.strip()\n",
-    "    return df\n",
-    "\n",
     "def clean():\n",
-    "    df1 = pd.read_csv(\"../data/electronic_police_report_2018.csv\")\n",
-    "    df2 = pd.read_csv(\"../data/electronic_police_report_2019.csv\")\n",
-    "    df3 = pd.read_csv(\"../data/electronic_police_report_2020.csv\")\n",
-    "    df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n",
-    "    df5 = pd.read_csv(\"../data/electronic_police_report_2022.csv\")\n",
-    "\n",
-    "    df1[\"year\"] = 2018\n",
-    "    df2[\"year\"] = 2019\n",
-    "    df3[\"year\"] = 2020\n",
-    "    df4[\"year\"] = 2021\n",
-    "    df5[\"year\"] = 2022\n",
-    "\n",
-    "    dfs = [df1, df2, df3, df4, df5]\n",
-    "    dfa = pd.concat(dfs, join=\"outer\")\n",
-    "\n",
-    "    dfa = dfa.pipe(standardize_item_no)\n",
+    "    dfa = pd.read_csv(\"../data/electronic_police_report_2018_2022.csv\")\n",
+    "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "    \n",
     "    dfb = pd.read_csv(\"../data/rtcc.csv\")\n",
-    "    dfb = dfb.pipe(standardize_item_no)\n",
+    "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "    dfb[\"rtcc_footage_requested\"] = \"yes\"\n",
     "\n",
     "    df = pd.merge(dfb, dfa, on=\"item_number\")\n",
