--- a/notebooks_rtcc/rtcc_police_reports.ipynb
+++ b/notebooks_rtcc/rtcc_police_reports.ipynb
@@ -23,29 +23,15 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "def standardize_item_no(df):\n",
-    "    df.loc[:, \"item_number\"] = df.item_number.str.lower().str.strip().str.replace(r\"-\", \"\", regex=False)\n",
-    "    return df\n",
+    "from lib import standardize_item_numbers\n",
     "\n",
     "def clean():\n",
-    "    df1 = pd.read_csv(\"../data/electronic_police_report_2018.csv\")\n",
-    "    df2 = pd.read_csv(\"../data/electronic_police_report_2019.csv\")\n",
-    "    df3 = pd.read_csv(\"../data/electronic_police_report_2020.csv\")\n",
-    "    df4 = pd.read_csv(\"../data/electronic_police_report_2021.csv\")\n",
-    "    df5 = pd.read_csv(\"../data/electronic_police_report_2022.csv\")\n",
-    "    df1[\"year\"] = 2018\n",
-    "    df2[\"year\"] = 2019\n",
-    "    df3[\"year\"] = 2020\n",
-    "    df4[\"year\"] = 2021\n",
-    "    df5[\"year\"] = 2022\n",
-    "    dfs = [df1, df2, df3, df4, df5]\n",
-    "    dfa = pd.concat(dfs, join=\"outer\")\n",
-    "    dfa = dfa.pipe(standardize_item_no)\n",
+    "    dfa = pd.read_csv(\"../data/electronic_police_report_2018_2022.csv\")\n",
+    "    dfa = dfa.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
     "    dfb = pd.read_csv(\"../data/rtcc.csv\")\n",
     "    dfb[\"footage_requested\"] = \"1\"\n",
-    "    dfb = dfb.pipe(standardize_item_no)\n",
+    "    dfb = dfb.pipe(standardize_item_numbers, [\"item_number\"])\n",
     "\n",
     "    df = pd.merge(dfa, dfb, on=\"item_number\")\n",
     "    return df"
