analyzed requests by location and time of day

--- a/notebooks_rtcc/rtcc_footage_request_rates_youth.ipynb
+++ b/notebooks_rtcc/rtcc_footage_request_rates_youth.ipynb
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "df = df.pipe(drop_rows_missing_offender_race).drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"item_number\"])"
+    "df = df.pipe(drop_rows_missing_offender_race).drop_duplicates(subset=[\"offender_race\", \"offender_gender\",\"offender_age\", \"item_number\"])"
    ]
   },
   {
