--- a/notebooks_rtcc/rtcc_footage_request_rates.ipynb
+++ b/notebooks_rtcc/rtcc_footage_request_rates.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "df = df.pipe(filter_year).pipe(drop_rows_missing_offender_race).pipe(filter_offender_gender)\\\n",
-    "    .drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"item_number\"])"
+    "    .drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"offender_age\", \"item_number\"])"
    ]
   },
   {
@@ -836,7 +836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.11 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -850,12 +850,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11 (tags/v3.9.11:2de452f, Mar 16 2022, 14:33:45) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f6c8f846148a3e4d140e6ddf63c190cff559dcf260a4a21539f0978f2b58638c"
+    "hash": "23f823caeccb1684f6bd50492b68bb5eab208de0408f39b2457c6a38c0e8e818"
    }
   }
  },
