--- a/notebooks_rtcc/rtcc_police_reports.ipynb
+++ b/notebooks_rtcc/rtcc_police_reports.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"item_number\"])"
+    "df = df.drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"offender_age\", \"item_number\"])"
    ]
   },
   {
