--- a/notebooks_rtcc/rtcc_police_reports_disparities.ipynb
+++ b/notebooks_rtcc/rtcc_police_reports_disparities.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "og_rtcc_df = (df.drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"item_number\"])\n",
+    "og_rtcc_df = (df.drop_duplicates(subset=[\"offender_race\", \"offender_gender\", \"offender_age\", \"item_number\"])\n",
     "        .pipe(standardize_and_drop_rows_w_na_values, [\"offender_race\"])\n",
     ")"
    ]
@@ -429,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
